# SITL_PrecisionLanding

./: .gitignore  README.md  install_into_workspace.sh  requirements.txt  verify_build_env.sh
docs/: BOX_HYBRID_SITL_PLAN.md  FLIGHT_TEST.md  PLAN.md  Tai_Lieu_Dac_Ta_KT_Milestone2_v3.docx  apriltag_fsm.dot  apriltag_fsm.md  apriltag_fsm.mmd  apriltag_mission_runbook.md  apriltag_precision_landing_gimbal.md  camera_cm4_rtsp_runbook.md  fractal_aruco_fsm.dot  full_runbook.md  main_fsm.mmd  nested_aruco_4x4_50.json  precision_landing_fsm.mmd  step0_marker_validation.md
px4/Tools/simulation/gz/models/apriltag_0/: model.config  model.sdf
px4/Tools/simulation/gz/models/apriltag_1/: model.config  model.sdf
px4/Tools/simulation/gz/models/apriltag_2/: model.config  model.sdf
px4/Tools/simulation/gz/models/apriltag_3/: model.config  model.sdf
px4/Tools/simulation/gz/models/arucotag/: model.sdf
px4/Tools/simulation/gz/models/dib_box_landing_pad/: model.config  model.sdf
px4/Tools/simulation/gz/models/fractal_aruco_marker/: model.config  model.sdf
px4/Tools/simulation/gz/models/nested_aruco_marker/: model.config  model.sdf
px4/Tools/simulation/gz/models/x500_gimbal/: model.sdf
px4/Tools/simulation/gz/worlds/: apriltag_landing.sdf  aruco_landing.sdf  fractal_aruco_landing.sdf  nested_aruco_landing.sdf
ros2_ws/src/aruco_fractal_tracker/: CMakeLists.txt  package.xml
ros2_ws/src/aruco_fractal_tracker/include/aruco_fractal_tracker/: aruco_fractal_tracker_node.hpp  aruco_standard_tracker_node.hpp
ros2_ws/src/aruco_fractal_tracker/src/: aruco_fractal_tracker_node.cpp  aruco_standard_tracker_node.cpp  aruco_standard_tracker_node_main.cpp
ros2_ws/src/dib_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/dib_msgs/msg/: BatteryStatus.msg  BoxCmd.msg  BoxEnvironment.msg  BoxInfo.msg  BoxPower.msg  BoxState.msg  BoxTelemetry.msg  ChargeStatus.msg  ClampStatus.msg  CoolingStatus.msg  DroneTelemetry.msg  LandingTarget6D.msg  LandingTarget6DArray.msg  LidStatus.msg  MissionItem.msg  MissionSchedule.msg  MissionScheduleCmd.msg  RTKInfo.msg  Rain.msg  State.msg  WindSensor.msg
ros2_ws/src/dib_msgs/srv/: BoxCmd.srv  ClampCmd.srv  LidCmd.srv  MissionScheduleCmd.srv  MissionUpload.srv
ros2_ws/src/precision_landing/: CMakeLists.txt  package.xml
ros2_ws/src/precision_landing/config/: custom_fractal.yml  offboard_precland_params.yaml  rtsp_publisher_params.yaml
ros2_ws/src/precision_landing/docs/: altitude_bug_analysis.md  fsm_diagram.md  refactoring_architecture.md
ros2_ws/src/precision_landing/include/precision_landing/: aruco_fractal_tracker_node.hpp  offboard_precland_controller.hpp  rtsp_publisher.hpp
ros2_ws/src/precision_landing/launch/: real_fractal_detect.launch.py  real_precland.launch.py  sitl_precland.launch.py
ros2_ws/src/precision_landing/src/: aruco_fractal_tracker_node.cpp  aruco_fractal_tracker_node_main.cpp  offboard_precland_controller.cpp  offboard_precland_controller_main.cpp  rtsp_publisher.cpp  rtsp_publisher_main.cpp
ros2_ws/src/px4_offboard/: package.xml  setup.py
ros2_ws/src/px4_offboard/launch/: apriltag_landing.launch.py  aruco_landing.launch.py  box_hardware_sim.launch.py  box_hybrid_landing.launch.py  fractal_aruco_landing.launch.py  qgc_offboard_precland.launch.py  qgc_sim_precland.launch.py
ros2_ws/src/px4_offboard/px4_offboard/: apriltag_precision_lander.py  apriltag_tracker.py  aruco_precision_lander.py  aruco_tracker.py  box_hybrid_precision_lander.py  box_hybrid_status_monitor.py  camera_viewer.py  drone_controller.py  fiducial_detector_node.py  fractal_aruco_precision_lander.py  landing_target_bridge.py  mavros_to_dib_telemetry.py  mock_box_hardware.py  nested_target_selector_node.py  offboard_precland_controller.py  sim_box_manager.py
ros2_ws/src/siyi_camera_bridge/: README.md  package.xml  setup.cfg  setup.py  siyi_uav_integration_plan.md
ros2_ws/src/siyi_camera_bridge/launch/: real_fractal_detect.launch.py
ros2_ws/src/siyi_camera_bridge/siyi_camera_bridge/: __init__.py  rtsp_publisher.py
scripts/: analyze_fractal_flight.py  generate_nested_aruco_marker.py  probe_gazebo_nested_aruco.py  validate_nested_marker.py
