<?xml version="1.0"?>
<package format="3">
  <name>px4_offboard</name>
  <version>0.1.0</version>
  <description>PX4 Offboard Control nodes for UAV simulation</description>
  <maintainer email="user@example.com">ducanh</maintainer>
  <license>Apache-2.0</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>px4_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv2</exec_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>ament_copyright</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
